# MiniCursor

./: .gitignore  README.md  pyproject.toml
src/minicursor/: __init__.py
